# momo-redis-ui

./: Cargo.toml  README.md  index.html  styles.css
api/: Cargo.toml
api/src/: error.rs  lib.rs
locales/: en.json  zh.json
src/: app.rs  app.scss  connection.rs  global_state.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20241229155933_create_connection_table.sql
src-tauri/src/: connection.rs  lib.rs  main.rs  migration.rs  redis_commands.rs  types.rs
src/menu/: connection_card.rs  mod.rs
src/new_connection/: mod.rs  new_connection.rs
src/panel/: panel.rs
src/settings/: settings.rs
src/sider/: mod.rs  sider.rs
