[package]
name = "one-redis-ui-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7.0-rc0", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos_i18n = { version = "0.5.0-gamma2", features = ["csr"] }
thaw = { version = "0.4.0-beta4", features = ["csr"] }
stylers = "0.3.2"
api = { version = "0.1.0", path = "api" }

[build-dependencies]
stylers = "0.3.2"

[workspace]
members = ["api", "src-tauri"]

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "zh"]
