[package]
name = "momo-redis-ui-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos_i18n = { version = "0.5", features = ["csr"] }
thaw = { version = "0.4", features = ["csr"] }
api = { version = "0.1.0", path = "api" }
turf = "0.9"
uuid = { version = "1.11", features = ["v4", "fast-rng", "macro-diagnostics"] }
leptos-use = "0.15"
web-sys = { version = "0.3", features = ["FileList"] }

[workspace]
members = ["api", "src-tauri"]

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "zh"]

[package.metadata.turf]
minify = true

[package.metadata.turf.class_names]
template = "momo_<original_name>_<id>"
