[package]
name = "one-redis-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["zhengxiaojian@apache.org"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "one_redis_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.27.4", features = ["cluster", "tokio-comp", "tokio-rustls-comp", "tls-rustls-insecure"] }
api = { version = "0.1.0", path = "../api" }
tokio = { version = "1.40.0", features = ["full"] }
rustls = "0.23.15"
